--- a/MiRate.Website/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MiRate.Website/Areas/Identity/Pages/Account/Login.cshtml
@@ -46,6 +46,29 @@
             </form>
         </section>
     </div>
+    <div id="paypal-button-container-P-125228206U583140PMWR5JYA"></div>
+<script
+    src="https://www.paypal.com/sdk/js?client-id=AVUJYFRSNiAkW-rjPtiNilsehM_8oMEosYdoUESBvQoVzTvZBuGCljHa25LipnmF0W9QH6v7brH9jqza&vault=true&intent=subscription"
+    data-sdk-integration-source="button-factory"></script>
+<script>
+    paypal.Buttons({
+        style: {
+            shape: 'pill',
+            color: 'blue',
+            layout: 'vertical',
+            label: 'subscribe'
+        },
+        createSubscription: function (data, actions) {
+            return actions.subscription.create({
+                /* Creates the subscription */
+                plan_id: 'P-125228206U583140PMWR5JYA'
+            });
+        },
+        onApprove: function (data, actions) {
+            alert(data.subscriptionID); // You can add optional success message for the subscriber here
+        }
+    }).render('#paypal-button-container-P-125228206U583140PMWR5JYA'); // Renders the PayPal button
+</script>
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
